--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -108,7 +108,7 @@
                                     </div>
                                     <div class="label">
 
-                                            <a href="{% url 'unitmanagement:replenishment_confirm' %}">ITEM REPLENISHMENT REQUESTS</a>
+                                            <a href="{% url 'unitmanagement:replenishment_confirm' %}">PENDING ITEM REPLENISHMENT REQUESTS</a>
 
                                     </div>
                                 </div>
