--- a/profiles/templates/profiles/login.html
+++ b/profiles/templates/profiles/login.html
@@ -53,13 +53,13 @@
     </div>
 </body>
 <style>
-    #bg{
-        background-size: cover;
-        background-repeat: no-repeat;
-        position: relative;
-        background-image: url('{% static "images/qwe2.jpg"%}');
-        background-size: 100% 100%;
-    }
+    <!--#bg{-->
+        <!--background-size: cover;-->
+        <!--background-repeat: no-repeat;-->
+        <!--position: relative;-->
+        <!--background-image: url('{% static "images/qwe2.jpg"%}');-->
+        <!--background-size: 100% 100%;-->
+    <!--}-->
 
     .screen_centered {
         position: fixed;
