--- a/unitmanagement/templates/unitmanagement/k9_unpartnered_list.html
+++ b/unitmanagement/templates/unitmanagement/k9_unpartnered_list.html
@@ -35,6 +35,19 @@
                 </td>
             </tr>
         {% endfor %}
+    <!--{% for data in data_on_leave %}-->
+            <!--<tr>-->
+                <!--<td>{{data.name}}</td>-->
+                <!--<td>{{data.serial_number}}</td>-->
+                <!--<td>{{data.breed}}</td>-->
+                <!--<td>{{data.age}}</td>-->
+                <!--<td>{{data.capability}}</td>-->
+                <!--<td><i class="green check icon"></i></td>-->
+                <!--<td class="ui center aligned">-->
+                    <!--<a class = 'ui blue tiny basic button' href="{% url 'unitmanagement:reassign_assets' data.id %}">Select</a>-->
+                <!--</td>-->
+            <!--</tr>-->
+        <!--{% endfor %}-->
     </tbody>
 </table>
          
