--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -35,11 +35,14 @@
             <a class="item" href="{% url 'profiles:trainer_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
             <a class="item" href="{% url 'training:classify_k9_list'%}"><i class="paw icon"></i>Training</a>
-            <a class="item" href="{% url 'unitmanagement:health_history_handler'%}"><i class="folder open icon"></i>Unit Management</a>
+            <!--<a class="item" href="{% url 'unitmanagement:health_history_handler'%}"><i class="folder open icon"></i>Unit Management</a>-->
 
             {% elif request.session.session_user_position == "Commander"%}
             <a class="item" href="{% url 'profiles:commander_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'deployment:assigned_location_list'%}"><i class="road icon"></i>Deployment</a>
+
+            {% elif request.session.session_user_position == "Operations"%}
+            <a class="item" href="{% url 'profiles:operations_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
 
             {% else %}
             <a class="item" href="{% url 'profiles:team_leader_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
