--- a/unitmanagement/templates/unitmanagement/k9_checkup_pending.html
+++ b/unitmanagement/templates/unitmanagement/k9_checkup_pending.html
@@ -33,6 +33,26 @@
     <div class="ui vertical divider"></div>
     <div class="top aligned row">
       <div class="column">
+          <div  class="ui segment" >
+              <h1 class="ui header">Appointments</h1>
+
+              <div class="ui list" id="legends">
+                  <div class="item"> <i class="red stop icon"> </i>Existing Appointments</div>
+
+                  <div class="item"> <i class="blue stop icon"> </i>Recommended Phex</div>
+                  </div>
+
+              <!--<button class = "ui blue button" id = "view_calendar">View Calendar</button>-->
+
+              <div class="sub header">Schedule phex on <div class="ui input">{{date_form}}</div></div>
+
+              <div id = "calendar"></div>
+              <div id='id_appointment_data' > </div>
+
+          </div>
+
+      </div>
+      <div class="column">
 
           <div class = "ui inverted segment">
 
@@ -67,23 +87,6 @@
 
 
       </div>
-      <div class="column">
-
-          <div  class="ui segment" >
-              <h1 class="ui header">Current Appointments</h1>
-
-              <button class = "ui blue button" id = "view_calendar">View Calendar</button>
-
-              <div class="sub header"> for the date <div class="ui input">{{date_form}}</div></div>
-
-
-
-          <div id='id_appointment_data' > </div>
-
-
-              </div>
-
-      </div>
     </div>
   </div>
  </div>
@@ -91,14 +94,14 @@
     <div id="id_scheduled_data"></div>
 
 
-<div class="ui longer modal" id ="calendar_modal">
-  <div class="header">Current Appointments</div>
-  <div class="content">
+<!--<div class="ui longer modal" id ="calendar_modal">-->
+  <!--<div class="header">Current Appointments</div>-->
+  <!--<div class="content">-->
 
-                       <div id = "calendar"></div>
+                       <!--<div id = "calendar"></div>-->
 
-  </div>
-</div>
+  <!--</div>-->
+<!--</div>-->
 
 
 <script type="text/javascript">
@@ -125,6 +128,7 @@
       var url = 'ajax_load_appointments';
       var date = $("input[name='date']").val();
 
+
       if (date != ""){
       $.ajax({
         url: url,
@@ -136,8 +140,8 @@
          $('input[type=checkbox]').removeAttr('disabled','disabled');
 
          $("#id_appointment_data").html(data); //The solution lies on the checkbox initial values
-
         }
+
       });
                     }
 
@@ -212,11 +216,10 @@ catch(err){alert(err);}
 
 <script>
 
-$( "#view_calendar" ).click(function() {
-   $('#calendar_modal').modal('show');
-   $('.fc-today-button.fc-button ').click();
-});
-
+<!--$( "#view_calendar" ).click(function() {-->
+   <!--$('#calendar_modal').modal('show');-->
+   <!--$('.fc-today-button.fc-button ').click();-->
+<!--});-->
 
 
      $('#calendar').fullCalendar({
@@ -232,22 +235,28 @@ $( "#view_calendar" ).click(function() {
           selectable: true,
           eventLimit: true,
           showNonCurrentDates: true,
-
           eventTextColor: "white",
-
 
           events: [
                 {% for i in events %}
                 {
-                     id: '{{ i.id }}',
+                    id: '{{ i.id }}',
                     title: '{{i.k9}}',
                     start: '{{ i.date_start|date:"Y-m-d" }}',
                     end: '{{ i.date_end|date:"Y-m-d" }}',
                     allDay: 'true',
+                    color: '#FB1F1F',
                 },
                 {% endfor %}
 
             ],
+
+            dayClick: function(date, jsEvent, view, resourceObj) {
+                    var formatted = date.format("YYYY-MM-DD");
+                    $("input[name='date']").val(formatted);
+                    $("input[name='date']").trigger("change");
+
+                  }
 
 
           }); // end #calendar
@@ -255,5 +264,14 @@ $( "#view_calendar" ).click(function() {
 
 </script>
 
+<style>
+     #legends{
+  position: absolute;
+  right: 50px;
+  width: 150px;
+  height: 80px;
+
+}
+</style>
 
 {% endblock %}
