--- a/unitmanagement/templates/unitmanagement/replenishment_request_confirm.html
+++ b/unitmanagement/templates/unitmanagement/replenishment_request_confirm.html
@@ -13,8 +13,8 @@
 </div>
 
 <div class="ui top attached tabular menu">
-        <a class="item active" data-tab="first">Item Replenishment Request</a>
-        <a class="item" data-tab="second">Pending Confirmation</a>
+        <a class="item active" data-tab="first">Pending</a>
+        <a class="item" data-tab="second">Approved</a>
     </div>
     <div class="ui tab segment active" data-tab="first">
         <table id="tabledata1" class="ui  column celled table">
